# akonadi-kopano

./: .gitignore  CMakeLists.txt  ItemAddedJob.cpp  ItemAddedJob.h  ItemsFlagsChangedJob.cpp  ItemsFlagsChangedJob.h  ItemsMovedJob.cpp  ItemsMovedJob.h  ItemsRemovedJob.cpp  ItemsRemovedJob.h  MailResource.cpp  MailResource.h  MapiSession.cpp  MapiSession.h  README.md  RetrieveCollectionsJob.cpp  RetrieveCollectionsJob.h  RetrieveItemJob.cpp  RetrieveItemJob.h  RetrieveItemsJob.cpp  RetrieveItemsJob.h  SendItemJob.cpp  SendItemJob.h  Settings.ui  SettingsDialog.cpp  SettingsDialog.h  Synchronizer.h  SynchronizerState.h  Utils.cpp  Utils.h  kopanoresource.desktop  kopanoresource.kcfg  settings.kcfgc
